--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,24 @@ a:active {
   padding-top: 20px;
 }
 
+.book-details-container {
+  margin: 15px;
+  flex: 1 0 auto;
+  min-height: auto;
+  position: relative;
+}
+
+.book-details-title {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 700;
+}
+
+.book-details-description {
+  color: #080C0D;
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 15px;
+}
+
 .saved-books-container {
   flex: 1 0 auto;
   min-height: auto;
@@ -84,10 +102,10 @@ a:active {
 
 .saved-books-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 148px);
+  grid-template-columns: repeat(auto-fit, 143px);
   grid-auto-rows: 130px;
-  grid-gap: 9px;
-  padding: 7px;
+  gap: 11px;
+  padding: 10px;
 }
 
 .saved-book {
@@ -242,6 +260,14 @@ button {
     padding: 20px 38px;
   }
 
+  .book-details-container {
+    margin: 25px;
+  }
+  
+  .book-details-title {
+    font-size: 25px;
+  }
+
   .footer > p {
     margin: 5px;
   }
@@ -253,12 +279,24 @@ button {
     padding: 20px 118px;
   }
 
+  .book-details-container {
+    margin: 35px;
+  }
+  
+  .book-details-title {
+    font-size: 30px;
+  }
+  
+  .book-details-description {
+    font-size: 18px;
+  }
+
   .saved-books-container {
     padding: 20px 28px;
   }
 
   .saved-books-grid {
-    grid-gap: 34px;
+    gap: 34px;
   }
 }
 
@@ -273,11 +311,15 @@ button {
     padding: 20px 218px;
   }
 
+  .book-details-container {
+    margin: 35px 280px 0px 55px;
+  }
+
   .saved-books-container {
     padding: 20px 50px;
   }
 
   .saved-books-grid {
-    grid-gap: 39px;
+    gap: 39px;
   }
 }
