--- a/src/styles.css
+++ b/src/styles.css
@@ -33,14 +33,15 @@ body {
   position: sticky;
   top: 0px;
   z-index: 2;
-  background-color: #c4d6d5;
+  background-color: #f8fcfc;
+  /* background-color: #c4d6d5; */
   height: 30px;
   display: flex;
   justify-content: space-between;
   padding: 15px 13px;
   color: #080C0D;
   font-family: 'Nanum Gothic', sans-serif;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 a {
@@ -48,13 +49,13 @@ a {
   color: #080C0D;
 }
 
-a:hover {
+/* a:hover {
   color:#f8fcfc;
 }
 
 a:active {
   color:#f8fcfc;
-}
+} */
 
 .home-container {
   flex: 1 0 auto;
@@ -224,7 +225,8 @@ button {
 
 .footer {
   flex-shrink: 0;
-  background-color: #c4d6d5;
+  background-color: #f8fcfc;
+  /* background-color: #c4d6d5; */
   padding: 15px;
   text-align: center;
   display: flex;
